--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
     <!-- NAVBAR -->
     <header class="navbar">
       <nav>
-        <ul>
-          <li>
-            <img src="img/LogoComNome.png" height="100px" width="100px" alt="Logo Simples" class="logo-simples" />
-            <a href="#inicio">Início</a>
-          </li>
-          <li><a href="#destaques">Destaques</a></li>
-          <li><a href="#cadastro">Cadastro</a></li>
-        </ul>
-      </nav>
+  <ul>
+    <li><img src="img/LogoComNome.png" height="100px" width="100px" alt="Logo Simples" class="logo-simples" /></li>
+    <li><a href="index.html">Início</a></li>
+    <li><a href="contato.html">Contato</a></li>
+    <li><a href="sobre.html">Sobre</a></li> <!-- Novo item -->
+  </ul>
+</nav>
+
     </header>
 
     <!-- BLOCO 1 - INÍCIO -->
-    <section id="inicio" class="hero-section">
+    <section id="INICIO" class="hero-section">
       <div class="hero-text">
         <h1>Seja Next. Seja Future.</h1>
         <p>Na FutureNext, acreditamos que o futuro pertence a quem ousa inovar. 
@@ -35,15 +34,15 @@
     </section>
 
     <!-- BLOCO 2 - DESTAQUES -->
-    <section id="destaques" class="highlight-section">
+    <section id="STARTUPS" class="highlight-section">
       <div class="arrow left" onclick="prevSlide()">&#10094;</div>
       <div class="cards-container" id="card-container"></div>
       <div class="arrow right" onclick="nextSlide()">&#10095;</div>
     </section>
 
     <!-- BLOCO 3 - CADASTRO -->
-    <section id="cadastro" class="form-section">
-      <h2>Cadastre sua Startup</h2>
+    <section id="CADASTRO" class="form-section">
+      <h2>CADASTRE SUA STARTUP </h2>
       <form>
         <input type="text" placeholder="Nome do Autor (CEO)" required />
         <input type="text" placeholder="Nome da Startup" required />
