--- a/contato.html
+++ b/contato.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contato - FutureNext</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="shortcut icon" href="img/LOGO.png" type="image/x-icon">
 </head>
+
 <body>
   <header class="navbar">
     <nav>
