--- a/sobre.html
+++ b/sobre.html
@@ -6,6 +6,7 @@
   <title>Sobre - FutureNext</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="img/LOGO.png" type="image/x-icon">
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
