--- a/sobre.html
+++ b/sobre.html
@@ -53,5 +53,8 @@
       <p>Ser referência nacional na descoberta e apoio a startups futuristas fundadas por estudantes e jovens talentos.</p>
     </section>
   </div>
+  <footer class="site-footer">
+  <p>&copy; 2025 FutureNext — Seja Next. Seja Future.</p>
+</footer>
 </body>
 </html>
