--- a/contato.html
+++ b/contato.html
@@ -47,5 +47,8 @@
       return false; // Evita o reload da página após envio fictício
     }
   </script>
+  <footer class="site-footer">
+  <p>&copy; 2025 FutureNext — Seja Next. Seja Future.</p>
+</footer>
 </body>
 </html>
