--- a/index.html
+++ b/index.html
@@ -73,22 +73,28 @@
     <!-- BLOCO 3 - CADASTRO -->
     <section id="CADASTRO" class="form-section">
       <h2>CADASTRE SUA STARTUP</h2>
-      <form id="cadastroForm">
-        <input type="text" placeholder="Nome do Autor (CEO)" required />
-        <input type="text" placeholder="Nome da Startup" required />
-        <select required>
-          <option value="">Categoria</option>
-          <option>Saúde</option>
-          <option>Educação</option>
-          <option>Energia</option>
-          <option>Tecnologia</option>
-          <option>Transporte</option>
-        </select>
-        <textarea placeholder="Problema resolvido" required></textarea>
-        <textarea placeholder="Solução proposta" required></textarea>
-        <textarea placeholder="Diferencial" required></textarea>
-        <button type="submit">Enviar</button>
-      </form>
+    <form id="cadastroForm">
+  <input type="text" placeholder="Nome do Autor (CEO)" required />
+  <input type="text" placeholder="Nome da Startup" required />
+  <select required>
+    <option value="">Categoria</option>
+    <option>Saúde</option>
+    <option>Educação</option>
+    <option>Energia</option>
+    <option>Tecnologia</option>
+    <option>Transporte</option>
+  </select>
+  <textarea placeholder="Problema resolvido" required></textarea>
+  <textarea placeholder="Solução proposta" required></textarea>
+  <textarea placeholder="Diferencial" required></textarea>
+
+  <!-- Upload da logo -->
+  <label for="logo">Anexar logo da empresa (PNG, JPG, JPEG, PDF):</label>
+  <input type="file" id="logo" name="logo" accept=".png, .jpg, .jpeg, .pdf" required />
+
+  <button type="submit">Enviar</button>
+</form>
+
     </section>
   </div>
 
@@ -110,12 +116,16 @@
 
       setTimeout(() => {
         modal.style.display = "none";
-      }, 10000); // Fecha após 10 segundos
+      }, 1); // Fecha após 10 segundos
 
       this.reset(); // Limpa os campos
     });
   </script>
 
   <script src="script.js"></script>
+  <footer class="site-footer">
+  <p>&copy; 2025 FutureNext — Seja Next. Seja Future.</p>
+</footer>
+
 </body>
 </html>
